[change] 一旦テンプレート向けに調整

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.11.1",
     "@neondatabase/serverless": "^1.0.2",
+    "@tanstack/react-query": "^5.90.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
+    "hono": "^4.10.6",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "next-auth": "^5.0.0-beta.30",
