--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "drizzle-orm": "^0.44.7",
     "hono": "^4.10.6",
     "lucide-react": "^0.554.0",
+    "minimatch": "^10.1.1",
     "next": "^16.0.7",
     "next-auth": "^5.0.0-beta.30",
     "next-pwa": "^5.6.0",
@@ -33,7 +34,6 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/minimatch": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
